--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.1.7",
-    "codemirror": "^6.0.1",
+    "@monaco-editor/react": "^4.5.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
@@ -24,6 +27,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "process": "^0.11.10"
   }
 }
