--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redis": "^4.6.6",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
