--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "redis": "^4.6.6",
     "socket.io": "^4.6.1",
+    "socket.io-redis": "^6.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
