--- a/web/package.json
+++ b/web/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./client/src/index.html"
+    "start": "parcel ./client/src/index.html",
+    "dev": "concurrently --kill-others \"npm start\" \"node server/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@monaco-editor/react": "^4.5.0",
+    "@socket.io/redis-adapter": "^8.1.0",
     "axios": "^1.4.0",
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "parcel": "^2.8.3",
@@ -25,6 +28,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "buffer": "^5.7.1",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
