--- a/k8s/web.yaml
+++ b/k8s/web.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
         - name: web
-          image: hw2-web:v1
+          image: live-coding
           ports:
-            - containerPort: 8000
-
+            - containerPort: 1234
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
@@ -27,4 +27,7 @@ spec:
   selector:
     app: web
   ports:
-    - port: 8000
+    - name: frontend
+      port: 1234
+    - name: backend
+      port: 3000
