--- a/k8s/web.yaml
+++ b/k8s/web.yaml
@@ -22,12 +22,21 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: web
+  name: web-frontend
 spec:
   selector:
     app: web
   ports:
     - name: frontend
       port: 1234
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: web-backend
+spec:
+  selector:
+    app: web
+  ports:
     - name: backend
       port: 3000
