--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
