--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@monaco-editor/react": "^4.5.0",
+    "bootstrap": "^5.2.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
